# getting_rusty

./: README.md
cli_find_and_replace/: Cargo.toml
cli_find_and_replace/src/: find_and_replace.rs  main.rs
even_more_rusty/: Cargo.toml
even_more_rusty/binary_heap/src/: main.rs
even_more_rusty/exercise_basics/: Cargo.toml
even_more_rusty/exercise_basics/src/: main.rs
even_more_rusty/exercise_enums/: Cargo.toml
even_more_rusty/exercise_enums/src/: main.rs
even_more_rusty/exercise_ownership/: Cargo.toml
even_more_rusty/exercise_ownership/src/: main.rs
even_more_rusty/exercise_structs_lifetimes/: Cargo.toml
even_more_rusty/exercise_structs_lifetimes/src/: main.rs
even_more_rusty/exercise_traits_generics/: Cargo.toml
even_more_rusty/exercise_traits_generics/src/: main.rs
even_more_rusty/maps/src/: main.rs
even_more_rusty/sandbox/src/: main.rs
even_more_rusty/testing/src/: lib.rs
even_more_rusty/todo/src/: lib.rs  things_todo.rs
even_more_rusty/todo/src/things_todo/: items_completed.rs
even_more_rusty/vectors_and_methods/: Cargo.toml
even_more_rusty/vectors_and_methods/src/: main.rs
exercise_A/src/: main.rs
exercise_C/src/: main.rs
exercise_d/src/: main.rs
exercise_e/src/: main.rs
exercise_f/src/: main.rs
exercise_g/: Cargo.toml
exercise_h/src/: main.rs
invaders/src/: main.rs
rust_basics/exercise_A/: Cargo.toml
rust_basics/exercise_g/src/: main.rs
rust_basics/exercise_h/: Cargo.toml
sandbox/src/: Text for phone.txt  main.rs
variables/: Cargo.toml
variables/src/: main.rs
