workspace = { members = ["basics", "exercise_basics", "exercise_enums", "exercise_ownership", "exercise_structs_lifetimes", "exercise_traits_generics", "sandbox", "todo", "vectors_and_methods"] }
[package]
name = "even_more_rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
